Fixed url overflow

--- a/assets/_sass/blog.sass
+++ b/assets/_sass/blog.sass
@@ -50,11 +50,14 @@ header
       line-height: 28px
       a
         color: $primary
-        overflow: hidden
-        white-space: nowrap
-        text-overflow: ellipsis
         &:hover
           color: $primary-dark
+        -ms-word-break: break-all
+        word-break: break-all
+        word-break: break-word
+        -webkit-hyphens: auto
+        -moz-hyphens: auto
+        hyphens: auto
       p
         margin: 20px 0
       img
